force-app/main/default/objects/Payment_Line_Item__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>Payment Line Items</relationshipLabel>
    <relationshipName>Payment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>