force-app/main/default/objects/Payment_Line_Item__c/fields/Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Channel Partner</label>
    <referenceTo>Channel_Partner__c</referenceTo>
    <relationshipLabel>Payment Line Items</relationshipLabel>
    <relationshipName>Payment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>