force-app/main/default/objects/Payment_Line_Item__c/fields/Comminsion_Rate__c.field-meta.xml
<CustomField>
    <fullName>Comminsion_Rate__c</fullName>
    <label>Comminsion Rate</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>