force-app/main/default/objects/Payment_Line_Item__c/fields/Contract_File__c.field-meta.xml
<CustomField>
    <fullName>Contract_File__c</fullName>
    <label>Contract File</label>
    <type>Url</type>
</CustomField>