force-app/main/default/objects/Payment_Line_Item__c/fields/Invoice_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Line Item</label>
    <referenceTo>Invoice_Line_Item__c</referenceTo>
    <relationshipLabel>Payment Line Items</relationshipLabel>
    <relationshipName>Payment_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>