force-app/main/default/objects/Payment_Line_Item__c/fields/Payament_Status__c.field-meta.xml
<CustomField>
    <fullName>Payament_Status__c</fullName>
    <label>Payament Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Processed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>