force-app/main/default/objects/Payment_Line_Item__c/fields/Payment_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Payment_Line_Item__c</fullName>
    <displayFormat>PLI-{000}</displayFormat>
    <label>Payment Line Item</label>
    <type>AutoNumber</type>
</CustomField>