force-app/main/default/objects/Payment_Line_Item__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>Payment Method</label>
    <length>38</length>
    <type>Text</type>
</CustomField>