force-app/main/default/objects/Payment_Line_Item__c/fields/Processing_date__c.field-meta.xml
<CustomField>
    <fullName>Processing_date__c</fullName>
    <label>Processing date</label>
    <type>Date</type>
</CustomField>