force-app/main/default/objects/Payment_Line_Item__c/fields/Project_name__c.field-meta.xml
<CustomField>
    <fullName>Project_name__c</fullName>
    <label>Project Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Project_Name</valueSetName>
    </valueSet>
</CustomField>