force-app/main/default/objects/Payment_Line_Item__c/fields/Transcantion_Number__c.field-meta.xml
<CustomField>
    <fullName>Transcantion_Number__c</fullName>
    <label>Transcantion Number</label>
    <length>38</length>
    <type>Text</type>
</CustomField>